HEAD
    + Use TryCatch instead of Error
    + Now copied directories in files section maintain structure as they are
      transferred as tar files and unpacked on the destination VM
    + Add option to the post-tests so they are executed always
    + Add skip option to the step by step execution
    + Stop before each test on step by step execution
    + Ignore critical attribute if running with -wait-fail
    + Run web tests with English locale to make them language independendant
    + Depend on qemu-kvm instead of kvm
    + Adding host name to the test output in the cli
    + Added support for proxy and security-mirror in vmbuilder
    + Allow to specify if the host of a web test is an external_host
    + Show output when setup scripts fail
    + Use qcow2 images instead of raw to support snapshots
    + Added anste-snapshot tool
    + Allow to define relative_url of a web test
    + Set options from [global] conf as commandline variables if not specified
    + Fixed check of running machines when system language is not English
    + Clean network from previous scenario when deploying a new one
    + clean option removed from the anste executable, use anste-clean instead
    + nat-iface and nameserver are now automatically detected
    + Environment variables named ANSTE_* are passed to setup scripts
    + Current scenario can be now shut down without specifying the name again
    + Check for unrecognized running VMs in anste-clean and added --force
      option to allow destroying them
    + New instance() method for System and Virtualizer abstract classes
    + Fixed error in the reboot type of test with the JunitWriter
    + Removed deprecated anste-manager and anste-job tools, use of a CI tool
      like Jenkins instead is recommended
    + Moved src/lib/ANSTE to src/ANSTE and data outside of src
    + Changing the cache type of the disk to one that gives faster results
    + Bridges are now named anstebr instead of virbr to avoid conflicts