@@ -22,7 +22,8 @@ gateway = 10.6.7.1
 #nat-iface = eth0
 
 [deploy]
-auto-create-images = 1
+# auto-create | auto-download | ask
+image-missing-action = auto-download
 
 [selenium]
 video = 0
