@@ -18,7 +18,8 @@ gateway = 10.6.7.1
 nat-iface = eth1
 
 [deploy]
-auto-create-images = 1
+# auto-create | auto-download | ask
+image-missing-action = auto-create
 
 [selenium]
 rc-jar = /home/josh/selenium-rc/selenium-server.jar
